--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "json-server": "^1.0.0-alpha.23",
+    "react-hook-form": "^7.50.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1"
   },
